--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') --max-nested-blocks 10
+        pylint $(git ls-files '*.py') --max-nested-blocks 10 --max-line-length 160
