--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,7 +1,10 @@
 name: Pylint
 
-on: [push]
-  path: ["**.py", ".github/workflows/pylint.yml"]
+on:
+  push:
+    path:
+      - "**.py"
+      - ".github/workflows/pylint.yml"
 jobs:
   build:
     runs-on: ubuntu-latest
