--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     strategy:
      matrix:
-      python-version: ["3.9", "3.10"]
+      python-version: ["3.10"]
     runs-on: windows-latest
 
     steps:
@@ -25,7 +25,7 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v3
 
-      - name: Setup python  #Build .exe file
+      - name: Setup python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
@@ -45,11 +45,13 @@ jobs:
           name: stats.exe
           path: dist\stats.exe
 
-  download:
+  publish:
     needs: [build]
     runs-on: windows-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: artifact.exe
-          path: dist\stats.exe
+          name: stats.exe
+
+      - name: Display structure of downloaded files
+        run: ls -R
