--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -54,5 +54,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          name: latest
           files: |
             stats.exe
