--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -67,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: $ {{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ${{ steps.download.outputs.download-path }}
+          asset_path: ${{ steps.download.outputs.download-path }}\stats.exe
           asset_name: stats-r${{ github.run_number }}.zip
           asset_content_type: application/zip
