--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -53,20 +53,9 @@ jobs:
         run: ls -R
 
       - name: Release
-        id: create-new-release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: $ {{ steps.create-new-release.outputs.upload_url }}
-          asset_path: ${{ steps.download.outputs.download-path }}\stats.exe
-          asset_name: stats-r${{ github.run_number }}.exe
-          asset_content_type: application/zip
+          name: ${{ github.run_number }}
+          files: ${{ steps.download.outputs.download-path }}\stats.exe
