--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -57,5 +57,5 @@ jobs:
         #if: startsWith(github.ref, 'refs/tags/v')
         with:
           tag_name: ${{ github.run_number }}
-          name: ${{ github.run_number }}
+          name: Release ${{ github.run_number }}
           files: ${{ steps.download.outputs.download-path }}\stats.exe
