--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{ github.ref_type == "tag" && contain(github.ref, 'refs/tags/v') }}
         with:
-          tag_name: ${{ github.run_number }}
-          name: Release ${{ github.run_number }}
+          tag_name: $GITHUB_REF_NAME
+          name: Release $GITHUB_REF_NAME
           files: ${{ steps.download.outputs.download-path }}\stats.exe
