--- a/.github/workflows/py_to_exe.yml
+++ b/.github/workflows/py_to_exe.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Set tag output
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/tags/*}
 
       - name: Release
         uses: softprops/action-gh-release@v1
