--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,11 +2,11 @@ name: Pylint
 
 on:
   push:
-    path:
-      - "**.py"
-      - ".github/workflows/pylint.yml"
+    tags:
+      - "v*.*.*"
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,3 +27,58 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py') --max-nested-blocks 10 --max-line-length 160
+
+  build:
+    needs: [test]
+    strategy:
+     matrix:
+      python-version: ["3.10"]
+    runs-on: windows-latest
+
+    steps:
+
+      - name: Git Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install auto-py-to-exe --no-input
+
+      - name: Build .exe file
+        run: |
+          pyinstaller --noconfirm --onefile --console  "stats.py"
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: stats.exe
+          path: dist\stats.exe
+
+  publish:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        id: download
+        with:
+          name: stats.exe
+
+      - name: Display structure of downloaded files
+        run: ls -R
+
+      - name: Set tag output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.vars.outputs.tag }}
+          name: Release ${{ steps.vars.outputs.tag }}
+          files: ${{ steps.download.outputs.download-path }}/stats.exe
