--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: CICD
 
 on:
   push:
@@ -59,6 +59,7 @@ jobs:
         with:
           name: stats.exe
           path: dist\stats.exe
+
 
   publish:
     needs: [build]
